src/test/ui/structs/struct-path-alias-bounds.stderr
error[E0277]: the trait bound `NoClone: Clone` is not satisfied
  --> $DIR/struct-path-alias-bounds.rs:6:10
   |
LL | struct S<T: Clone> { a: T }
   |             ----- required by this bound in `S`
...
LL | type A = S<NoClone>;
   |          ^^^^^^^^^^ the trait `Clone` is not implemented for `NoClone`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
